# clickhouse-query-repair-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  docker-compose.yml  docker-entrypoint.sh  inference.py  models.py  openenv.yaml  pyproject.toml  validation-submission.sh
docker/: clickhouse-resource-limits.xml
scripts/: pre_submit_check.py
server/: __init__.py  app.py  chqr_clickhouse.py  clickhouse_query_repair_environment.py  requirements.txt  sql_utils.py  task_loader.py
tasks/: agg_merge_state.json  aggregate_scope.json  argmax_null_collapse.json  array_join_inflate.json  collapsing_sign_sum.json  column_typo.json  join_keys.json  merge_order_by.json  merge_partition_month.json  missing_limit.json  prewhere_hint.json  wrong_date_func.json
tests/: test_sql_utils.py
